--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "element-plus": "^2.0.2",
+    "firebase": "^9.6.7",
     "pinia": "^2.0.11",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
@@ -33,6 +34,7 @@
     "eslint-plugin-vue": "^8.2.0",
     "jsdom": "^19.0.0",
     "prettier": "^2.5.1",
+    "sass": "^1.49.8",
     "start-server-and-test": "^1.14.0",
     "typescript": "~4.5.5",
     "vite": "^2.8.4",
